change fish shell path to M1 homebrew Fish

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # TMUX configuration
 
-set-option -g default-shell "/usr/local/bin/fish"
+set-option -g default-shell "/opt/homebrew/bin/fish"
 
 set-option -sa terminal-overrides ',XXX:RGB'
 
