--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,9 @@
 
 set-option -g default-shell "/opt/homebrew/bin/fish"
 
-set-option -sa terminal-overrides ',XXX:RGB'
+set-option -sa terminal-overrides ',screen-256color:RGB'
 
+set-option -g focus-events on
 # use C-s, since it's on the home row and easier to hit than C-b
 set-option -g prefix C-s
 unbind-key C-s
@@ -123,4 +124,5 @@ set -g status-justify left
 set -g window-status-current-format "#[fg=green]#[bg=default][#[bg=default]#[fg=white]#W#[fg=green]#[bg=default]]"
 set -g window-status-format "#[bg=default]#[fg=white]#W"
 
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
