fix tmuxconf shell configuration to work with both M1 and intel mac's homebrew

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,9 @@
 # TMUX configuration
 
-set-option -g default-shell "/opt/homebrew/bin/fish"
+if-shell -b '[ -f /opt/homebrew/bin/fish ]'\
+  'set-option -g default-shell "/opt/homebrew/bin/fish"'
+if-shell -b '[ -f /usr/local/bin/fish ]'\
+  'set-option -g default-shell "/usr/local/bin/fish"'
 
 set-option -sa terminal-overrides ',screen-256color:RGB'
 
