update to nvchad for nvim config

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,6 @@ if-shell -b '[ -f /opt/homebrew/bin/fish ]'\
 if-shell -b '[ -f /usr/local/bin/fish ]'\
   'set-option -g default-shell "/usr/local/bin/fish"'
 
-set-option -sa terminal-overrides ',screen-256color:RGB'
 
 set-option -g focus-events on
 # use C-s, since it's on the home row and easier to hit than C-b
@@ -26,6 +25,8 @@ set -g mouse on
 
 setw -g aggressive-resize on
 
+set-option -g renumber-windows on
+
 set -sg escape-time 0
 
 set-option -g repeat-time 0
@@ -42,6 +43,8 @@ set-option -g visual-bell off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
+
+set-option -g history-limit 5000
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
@@ -65,6 +68,8 @@ bind y setw synchronize-panes
 bind-key : command-prompt
 bind-key r refresh-client
 # bind-key L clear-history
+
+bind-key T move-window -t 0
 
 bind-key space next-window
 bind-key bspace previous-window
@@ -102,6 +107,9 @@ bind-key -n S-Right set-option -g status-position bottom
 set -g pane-active-border-style bg=default,fg=green
 set -g pane-border-style fg=default
 
+# name every tab as current directoy
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
 
 # Clock
 set-window-option -g clock-mode-colour green
@@ -127,5 +135,19 @@ set -g status-justify left
 set -g window-status-current-format "#[fg=green]#[bg=default][#[bg=default]#[fg=white]#W#[fg=green]#[bg=default]]"
 set -g window-status-format "#[bg=default]#[fg=white]#W"
 
-# set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
+
+
+# Don't exit copy mode on double or triple click.
+bind-key -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word"
+bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line"
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
+# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+
+
+# tell Tmux that outside terminal supports true color
+set -g default-terminal 'screen-256color'
+# set -as terminal-overrides ",xterm-256color*:Tc"
+# set-option -a terminal-overrides ",*256col*:RGB"
+# set-option -a terminal-overrides ",*256col*:Tc"
+
