move custom nvim config out of nvim dir

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -16,6 +16,7 @@ autoremove = "echo not defined"
 
 [nvim.files]
 "nvim" = { target = "~/.config/nvim", type = "symbolic" }
+"nvim-custom/custom" = { target = "~/.config/nvim/lua/custom", type = "symbolic" }
 
 [git.files]
 "gitconfig" = "~/.gitconfig"
