add leap.vim pluging + ask for confirmation when deleting tmux windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,8 +53,10 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 bind-key C-b set-option -g status
 
 # Avoid delete window/pane confirmation
-bind-key & kill-window
-bind-key x kill-pane
+# bind-key & kill-window
+# bind-key x kill-pane
+# unbind C-d
+# bind -n C-d confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 5
