--- a/tmux.conf
+++ b/tmux.conf
@@ -1,23 +1,25 @@
 # TMUX configuration
 
+# set up the fish shell
 if-shell -b '[ -f /opt/homebrew/bin/fish ]'\
   'set-option -g default-shell "/opt/homebrew/bin/fish"'
 if-shell -b '[ -f /usr/local/bin/fish ]'\
   'set-option -g default-shell "/usr/local/bin/fish"'
 
 
-set-option -g focus-events on
 # use C-s, since it's on the home row and easier to hit than C-b
 set-option -g prefix C-s
 unbind-key C-s
 bind-key C-s send-prefix
 
-set -g base-index 1
-
 # vi is good
 setw -g mode-keys vi
 
-# Activity Monitoring
+set-option -g focus-events on
+
+set -g base-index 1
+
+# activity monitoring
 setw -g monitor-activity on
 set -g visual-activity on
 
