--- a/tmux.conf
+++ b/tmux.conf
@@ -150,8 +150,9 @@ unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 
 # tell Tmux that outside terminal supports true color
-set -g default-terminal 'screen-256color'
+# set -g default-terminal 'screen-256color'
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 # set -as terminal-overrides ",xterm-256color*:Tc"
 # set-option -a terminal-overrides ",*256col*:RGB"
 # set-option -a terminal-overrides ",*256col*:Tc"
-
