--- a/tmux.conf
+++ b/tmux.conf
@@ -150,9 +150,23 @@ unbind-key -T copy-mode-vi MouseDragEnd1Pane
 
 
 # tell Tmux that outside terminal supports true color
+# set-option -sa terminal-features ',tmux-256color:RGB'
+# set -as terminal-features ",tmux-256color:RGB"
+# set-option -sa terminal-features ',xterm-256color:RGB'
+# set -ag terminal-overrides ",xterm-256color:RGB"
+# set-option -sa terminal-features ',alacritty:RGB'
+
+
 # set -g default-terminal 'screen-256color'
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+# set -g default-terminal "tmux-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
 # set -as terminal-overrides ",xterm-256color*:Tc"
 # set-option -a terminal-overrides ",*256col*:RGB"
 # set-option -a terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "alacritty:RGB"
+# set -ag terminal-overrides ",alacritty:Tc"
+
+
+set-option default-terminal "screen-256color"
+# set -g default-terminal "tmux-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
