--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -15,7 +15,7 @@ update = "echo not defined"
 autoremove = "echo not defined"
 
 [nvim.files]
-"nvim/custom" = { target = "~/.config/nvim/lua/custom", type = "symbolic" }
+"nvim/nvim" = { target = "~/.config/nvim", type = "symbolic" }
 
 [git.files]
 "gitconfig" = "~/.gitconfig"
