change colors of pane titles in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -136,8 +136,8 @@ set -g status-right "#[fg=colour7]#[bg=default]#(~/.config/scripts/battery.sh) \
 
 set -g status-justify left
 
-set -g window-status-current-format "#[fg=green]#[bg=default][#[bg=default]#[fg=white]#W#[fg=green]#[bg=default]]"
-set -g window-status-format "#[bg=default]#[fg=white]#W"
+set -g window-status-current-format "#[fg=white]#[bg=default]#W"
+set -g window-status-format "#[bg=default]#[fg=color240]#W"
 
 
 
