Add Harpoon plugin to nivm

--- a/tmux.conf
+++ b/tmux.conf
@@ -97,6 +97,8 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+bind -n M-x kill-pane
+
 bind-key q display-panes
 
 # Setup 'v' to begin selection as in Vim
