--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,7 @@
 # Config
 import = [
   "/Users/amorales/.config/alacritty/colors/nord.toml",
+  # "/Users/amorales/.config/alacritty/colors/baitong.toml",
 ]
 
 live_config_reload = true
