add keybind to toggle a floating pane tmux session

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,6 +79,13 @@ bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
 
+# toggle scratch popup
+bind-key -n M-g if-shell -F '#{==:#{session_name},scratch}' {
+  detach-client
+} {
+  display-popup -E "tmux new-session -A -s scratch"
+}
+
 # use vim-like keys for splits and windows
 unbind '"'
 unbind %
