--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,10 +80,10 @@ bind-key bspace previous-window
 bind-key enter next-layout
 
 # toggle scratch popup
-bind-key -n M-g if-shell -F '#{==:#{session_name},scratch}' {
+bind-key -n M-p if-shell -F '#{==:#{session_name},scratch}' {
   detach-client
 } {
-  display-popup -E "tmux new-session -A -s scratch"
+  display-popup -h 50% -w 100% -x 0% -y 100% -E "tmux new-session -A -s scratch"
 }
 
 # use vim-like keys for splits and windows
