better visual block selection on tmux with C-v

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -113,6 +113,7 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
 
 bind-key -n S-Left set-option -g status-position top
 bind-key -n S-Right set-option -g status-position bottom
