--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,9 @@ set-option -g prefix C-s
 unbind-key C-s
 bind-key C-s send-prefix
 
+# if last pane is closed, change to another session instead of detaching
+set-option -g detach-on-destroy off
+
 # vi is good
 setw -g mode-keys vi
 
@@ -79,12 +82,15 @@ bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
 
-# toggle scratch popup
-bind-key -n M-p if-shell -F '#{==:#{session_name},scratch}' {
+# toggle org popup
+bind-key -n M-p if-shell -F '#{==:#{session_name},org}' {
   detach-client
 } {
-  display-popup -h 50% -w 100% -x 0% -y 100% -E "tmux new-session -A -s scratch"
+  display-popup -h 50% -w 100% -x 0% -y 100% -E "tmux new-session -A -s org"
 }
+
+# easy session switcher
+bind-key -n M-s display-popup -h 20% -w 20% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
 
 # use vim-like keys for splits and windows
 unbind '"'
@@ -139,10 +145,9 @@ set -g status-justify left
 set-option -g status-style bg=default
 set-option -g status-style fg=colour7
 
-set -g status-right ""
 set -g status-left ""
 
-set -g status-right "#[fg=colour7]#[bg=default]#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
+set -g status-right "#S #[fg=colour7]#[bg=default]#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
 
 set -g status-justify left
 
