add tw configuration

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -16,6 +16,9 @@
 "shell/fd.ignore" = "~/.config/fd/ignore"
 "shell/htoprc" = "~/.config/htop/htoprc"
 
+[org.files]
+task = "~/.config/task"
+
 [scripts.files]
 scripts = "~/.config/scripts"
 
