add some tmux plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -54,7 +54,7 @@ set-option -g history-limit 50000
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
-# Switch statusbar show
+# Toggle statusbar
 bind-key C-b set-option -g status
 
 # Avoid delete window/pane confirmation
@@ -112,6 +112,11 @@ bind -n M-l select-pane -R
 
 bind -n M-x kill-pane
 
+# zoomig into a new window and back
+unbind M-z
+bind -n M-z resize-pane -Z
+# bind -n M-z run ". ~/.dotfiles/scripts/zoom-tmux
+
 bind-key q display-panes
 
 # Setup 'v' to begin selection as in Vim
@@ -147,7 +152,7 @@ set-option -g status-style fg=colour7
 
 set -g status-left ""
 
-set -g status-right "#S #[fg=colour7]#[bg=default]#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
+set -g status-right "#S #[fg=colour7]#[bg=default] #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
 
 set -g status-justify left
 
