better tmux kill pane keybind

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,8 +60,7 @@ bind-key C-b set-option -g status
 # Avoid delete window/pane confirmation
 # bind-key & kill-window
 # bind-key x kill-pane
-# unbind C-d
-# bind -n C-d confirm-before -p "kill-pane #P? (y/n)" kill-pane
+bind C-x confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 5
@@ -76,6 +75,7 @@ bind-key : command-prompt
 bind-key r refresh-client
 # bind-key L clear-history
 
+# put current window in the top left
 bind-key T move-window -t 0
 
 bind-key space next-window
@@ -83,14 +83,15 @@ bind-key bspace previous-window
 bind-key enter next-layout
 
 # toggle org popup
+set -g popup-border-lines rounded
 bind-key -n M-p if-shell -F '#{==:#{session_name},org}' {
   detach-client
 } {
-  display-popup -h 50% -w 100% -x 0% -y 100% -E "tmux new-session -A -s org"
+  display-popup -S fg=color8 -h 50% -w 100% -x 0% -y 100% -E "tmux new-session -A -s org"
 }
 
 # easy session switcher
-bind-key -n M-s display-popup -h 20% -w 20% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
+bind-key -n M-s display-popup -S fg=color8 -h 20% -w 20% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
 
 # use vim-like keys for splits and windows
 unbind '"'
