use solarized theme by default + other suff

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -130,6 +130,16 @@ bind-key -T copy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-togg
 bind-key -n S-Left set-option -g status-position top
 bind-key -n S-Right set-option -g status-position bottom
 
+## Split and Join windows: <prefix> !, <prefix> @
+# bind-key @ command-prompt -p "join pane from:"  "join-pane -s '%%'"
+bind-key @ choose-window "join-pane -h -s "%%""
+
+# default ones by slightly resized
+bind-key M-3 select-layout "e977,201x56,0,0[201x9,0,0,55,201x46,0,10{100x46,0,10,54,100x46,101,10,53}]"
+bind-key M-4 select-layout "7738,201x56,0,0{90x56,0,0,54,110x56,91,0[110x42,91,0,55,110x13,91,43,53]}"
+bind-key M-5 select-layout "9c2b,201x56,0,0[201x44,0,0{100x44,0,0,65,100x44,101,0,68},201x11,0,45,66]"
+
+
 set -g pane-active-border-style bg=default,fg=green
 set -g pane-border-style fg=default
 
