remove tmux pane indicators

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -140,8 +140,8 @@ bind-key M-4 select-layout "7738,201x56,0,0{90x56,0,0,54,110x56,91,0[110x42,91,0
 bind-key M-5 select-layout "9c2b,201x56,0,0[201x44,0,0{100x44,0,0,65,100x44,101,0,68},201x11,0,45,66]"
 
 
-set -g pane-active-border-style bg=default,fg=green
-set -g pane-border-style fg=default
+set -g pane-active-border-style bg=default,fg=color0
+set -g pane-border-style fg=color0
 
 # name every tab as current directoy
 set-option -g automatic-rename-format '#{b:pane_current_path}'
