--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -18,7 +18,7 @@ dynamic_title = false
 dynamic_padding = false
 option_as_alt = 'OnlyLeft'
 decorations = "ButtonLess" # "None"
-padding = { x = 5, y = 5 }
+padding = { x = 5, y = 3 }
 
 # opacity = 0.7
 # blur = true
@@ -36,10 +36,13 @@ render_timer = false
 [font]
 normal = { family = "FiraCode Nerd Font Mono" }
 
+# ligatures: => <= !=
 # find installed fonts (macOS): fc-list : family | sort -f
 # "Liga SFMono Nerd Font"
 # "FiraCode Nerd Font Mono"
 # "GohuFont uni14 Nerd Font Mono"
+# "ComicShannsMono Nerd Font Mono"
+
 
 size = 14.0
 offset = { x = 0, y = 3 }
