simoplify tmux status bar to bare minimum

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,10 +51,19 @@ set-option -g bell-action none
 
 set-option -g history-limit 50000
 
+# set -g lock-after-time 0
+# set -g lock-command ""
+# set -g monitor-silence 0
+# set -g visual-silence off
+# set -g alert-silence clock
+# set -g silence-action current
+# set -g visual-bell off
+
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # Toggle statusbar
+set -g status off
 bind-key C-b set-option -g status
 
 # Avoid delete window/pane confirmation
@@ -146,8 +155,6 @@ set -g pane-border-style fg=color0
 # name every tab as current directoy
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
-
-# Clock
 set-window-option -g clock-mode-colour green
 
 set-option -g status-interval 1
@@ -163,7 +170,8 @@ set-option -g status-style fg=colour7
 
 set -g status-left ""
 
-set -g status-right "#S #[fg=colour7]#[bg=default] #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
+set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh)"
+# set -g status-right "#S #[fg=colour7]#[bg=default] #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
 
 set -g status-justify left
 
