--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -106,8 +106,10 @@ bind-key -n M-s display-popup -S fg=color0 -h 10% -w 100% -x 0% -y 100% -E "~/.d
 # use vim-like keys for splits and windows
 unbind '"'
 unbind %
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c '#{pane_current_path}'
+bind-key s split-window -v -c '#{pane_current_path}'
+bind-key V split-window -h
+bind-key S split-window -v
 
 # Vim keys to selec panes
 bind-key h select-pane -L
