--- a/ghostty/config
+++ b/ghostty/config
@@ -9,8 +9,6 @@ mouse-hide-while-typing = true
 mouse-scroll-multiplier = 3
 # background-opacity = 1
 # background-blur-radius = 20
-scrollback-limit = 100000
-title = " "
 macos-titlebar-style = hidden
 window-padding-balance=true
 window-padding-x = 4
@@ -27,4 +25,5 @@ macos-icon-screen-color = 000000
 quick-terminal-animation-duration = 0
 quick-terminal-position = bottom
 keybind = ctrl+shift+\=toggle_quick_terminal
+keybind = cmd+t=unbind
 #keybind = ctrl+m=text:\x0D
