nvim big config update

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -91,25 +91,24 @@ bind-key space next-window
 bind-key bspace previous-window
 bind-key enter next-layout
 
-# toggle org popup
+# toggle basic popup with "org" session
 set -g popup-border-lines rounded
-bind-key -n M-p if-shell -F '#{==:#{session_name},org}' {
+bind-key N if-shell -F '#{==:#{session_name},org}' {
   detach-client
 } {
   display-popup -S fg=color0 -h 35% -w 100% -x 0% -y 100% -E "tmux new-session -A -s org"
 }
 
-# easy session switcher
-bind-key -n M-s display-popup -S fg=color0 -h 10% -w 100% -x 0% -y 100% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
-# bind-key -n M-s display-popup -S fg=color8 -h 20% -w 20% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
+# toggle session switcher popup
+bind-key S display-popup -S fg=color0 -h 10% -w 100% -x 0% -y 100% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
 
 # use vim-like keys for splits and windows
 unbind '"'
 unbind %
 bind-key v split-window -h -c '#{pane_current_path}'
 bind-key s split-window -v -c '#{pane_current_path}'
-bind-key V split-window -h
-bind-key S split-window -v
+# bind-key V split-window -h
+# bind-key S split-window -v
 
 # Vim keys to selec panes
 bind-key h select-pane -L
@@ -122,8 +121,6 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
-
-bind -n M-x kill-pane
 
 # zoomig into a new window and back
 unbind M-z
