fix tmux-nvim navigation lag

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -135,6 +135,7 @@ bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 #     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 # if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 #     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+bind-key  m display-message "#{pane_tty}"
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
@@ -165,7 +166,7 @@ bind-key @ choose-window "join-pane -h -s "%%""
 
 # default ones by slightly resized
 bind-key M-3 select-layout "e977,201x56,0,0[201x9,0,0,55,201x46,0,10{100x46,0,10,54,100x46,101,10,53}]"
-bind-key M-4 select-layout "7738,201x56,0,0{90x56,0,0,54,110x56,91,0[110x42,91,0,55,110x13,91,43,53]}"
+bind-key M-4 select-layout "3a2c,201x56,0,0{108x56,0,0,6,92x56,109,0[92x42,109,0,0,92x13,109,43,5]}"
 bind-key M-5 select-layout "9c2b,201x56,0,0[201x44,0,0{100x44,0,0,65,100x44,101,0,68},201x11,0,45,66]"
 
 
