--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -111,10 +111,10 @@ bind-key s split-window -v -c '#{pane_current_path}'
 # bind-key S split-window -v
 
 # Vim keys to selec panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
+# bind-key h select-pane -L
+# bind-key j select-pane -D
+# bind-key k select-pane -U
+# bind-key l select-pane -R
 
 # Use Alt-vim keys without prefix key to switch panes
 # bind -n M-h select-pane -L
