--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -70,6 +70,7 @@ bind-key C-b set-option -g status
 # bind-key & kill-window
 # bind-key x kill-pane
 bind C-x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+bind-key -n M-x confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 5
@@ -102,13 +103,16 @@ bind-key N if-shell -F '#{==:#{session_name},org}' {
 # toggle session switcher popup
 bind-key S display-popup -S fg=color0 -h 10% -w 100% -x 0% -y 100% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
 
+# stop prefix l
+unbind l
+
 # use vim-like keys for splits and windows
 unbind '"'
 unbind %
 bind-key v split-window -h -c '#{pane_current_path}'
 bind-key s split-window -v -c '#{pane_current_path}'
-# bind-key V split-window -h
-# bind-key S split-window -v
+bind-key -n 'M-v' split-window -h
+bind-key -n 'M-s' split-window -v
 
 # Vim keys to selec panes
 # bind-key h select-pane -L
@@ -116,26 +120,17 @@ bind-key s split-window -v -c '#{pane_current_path}'
 # bind-key k select-pane -U
 # bind-key l select-pane -R
 
-# Use Alt-vim keys without prefix key to switch panes
-# bind -n M-h select-pane -L
-# bind -n M-j select-pane -D
-# bind -n M-k select-pane -U
-# bind -n M-l select-pane -R
-
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
-bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
-bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
-bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
-bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
-# tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-# if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-# if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-#     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-bind-key  m display-message "#{pane_tty}"
+bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+
+# show current pane tty
+bind-key Y display-message "#{pane_tty}"
 
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
