--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -69,8 +69,9 @@ bind-key C-b set-option -g status
 # Avoid delete window/pane confirmation
 # bind-key & kill-window
 # bind-key x kill-pane
-bind C-x confirm-before -p "kill-pane #P? (y/n)" kill-pane
-bind-key -n M-x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+# bind C-x confirm-before -p "kill-pane #P? (y/n)" kill-pane
+unbind -n M-x
+bind-key -n M-d confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 5
