move git related plugins to their own file

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -116,10 +116,10 @@ bind-key -n 'M-v' split-window -h
 bind-key -n 'M-s' split-window -v
 
 # Vim keys to selec panes
-# bind-key h select-pane -L
-# bind-key j select-pane -D
-# bind-key k select-pane -U
-# bind-key l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
