--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -91,18 +91,44 @@ bind-key T move-window -t 0
 
 bind-key space next-window
 bind-key bspace previous-window
-bind-key enter next-layout
+# bind-key enter next-layout
+
+# Join a pane; enter the source window (and, optionally, pane)
+# ":1" or ":1.1"
+# bind-key J choose-tree -Zw "join-pane -s '%%'"
+# # Send a pane to another window; enter the destination window
+# # ":1" or "sessionName.:1"
+# bind-key P choose-tree -Zw "join-pane -t '%%'"
 
 # toggle basic popup with "org" session
 set -g popup-border-lines rounded
-bind-key N if-shell -F '#{==:#{session_name},org}' {
+bind-key C-n if-shell -F '#{==:#{session_name},org}' {
   detach-client
 } {
-  display-popup -S fg=color0 -h 35% -w 100% -x 0% -y 100% -E "tmux new-session -A -s org"
+  display-popup -BE -S fg=color0 -h 35% -w 100% -x 0% -y 100% "tmux new-session -A -s org"
 }
 
 # toggle session switcher popup
-bind-key S display-popup -S fg=color0 -h 10% -w 100% -x 0% -y 100% -E "~/.dotfiles/scripts/tmux-sessions-popup.sh"
+bind-key C-s display-popup -BE -S fg=color0 -h 10% -w 100% -x 0% -y 100% "~/.dotfiles/scripts/tmux-sessions-popup.sh"
+
+bind-key -n C-\\ if-shell -F '#{==:#{session_name},scratch}' {
+  detach-client
+} {
+  display-popup -BE -S fg=color0 -h 35% -w 100% -x 0% -y 100% "tmux new-session -A -s scratch"
+}
+
+bind-key C-p if-shell -F '#{==:#{session_name},scratch}' {
+  detach-client
+} {
+  display-popup -BE -S fg=color0 -h 70% -w 70% -x C -y C "tmux new-session -A -s scratch"
+}
+
+# bind-key A display-popup -d '#{pane_current_path}' -xC -yC -w 80% -h 80% -E "htop"
+
+# capture content of pane |> filter |> fzf |> action
+# tmux capture-pane -J -p |
+#     grep -oE '(https?|ftp|file):/?//[-A-Za-z0-9+&@#/%?=~_|!:,.;]*[-A-Za-z0-9+&@#/%=~_|]' |
+#     sort -u | fzf-tmux --prompt "Select URL: " | xargs open
 
 # stop prefix l
 unbind l
@@ -185,9 +211,9 @@ set -g status-justify left
 set-option -g status-style bg=default
 set-option -g status-style fg=colour7
 
-set -g status-left ""
+set -g status-left " "
 
-set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh)"
+set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) "
 # set -g status-right "#S #[fg=colour7]#[bg=default] #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
 
 set -g status-justify left
