--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -4,67 +4,100 @@ tap "hashicorp/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/services"
+tap "jesseduffield/lazydocker"
+tap "jorgerojas26/lazysql"
 tap "khanhas/tap"
 tap "koekeishiya/formulae"
 tap "martido/graph"
 tap "mongodb/brew"
 tap "shaunsingh/sfmono-nerd-font-ligaturized"
+brew "libtiff"
+brew "jpeg-xl"
+brew "cryptography"
 brew "awscli"
 brew "bandwhich"
 brew "bartib"
 brew "bat"
 brew "bottom"
+brew "btop"
+brew "cairo"
+brew "cbonsai"
 brew "cmake"
 brew "docker"
+brew "coreutils"
 brew "docker-compose"
 brew "duckdb"
 brew "dust"
+brew "erlang"
 brew "elixir"
 brew "eza"
 brew "fd"
 brew "fish"
+brew "fisher"
 brew "fzf"
 brew "gdk-pixbuf"
+brew "gh"
+brew "netpbm"
 brew "harfbuzz"
 brew "pango"
 brew "librsvg"
 brew "graphviz"
-brew "helix"
 brew "htop"
 brew "jq"
+brew "luajit"
+brew "luarocks"
+brew "mactop"
 brew "neovim"
 brew "nmap"
+brew "node"
 brew "nvm"
-brew "poetry"
+brew "ollama"
+brew "pkgconf"
+brew "postgresql@15"
 brew "postgresql@16", link: true
 brew "pspg"
+brew "pv"
 brew "pyright"
+brew "raylib"
+brew "rename"
 brew "ripgrep"
 brew "ripsecrets"
 brew "rust-analyzer"
-brew "rustup-init"
+brew "rustup"
+brew "rye"
+brew "sdl2"
+brew "sdl2_ttf"
 brew "task"
+brew "tasksh"
 brew "tealdeer"
+brew "timewarrior"
 brew "tmux"
 brew "trippy"
+brew "uv"
 brew "watch"
+brew "wget"
 brew "xsv"
 brew "zoxide"
 brew "hashicorp/tap/terraform"
-brew "mongodb/brew/mongodb-community"
 cask "adguard"
-cask "adobe-acrobat-reader"
-cask "alacritty"
+brew "jesseduffield/lazydocker/lazydocker"
+cask "anki"
+cask "calibre"
+cask "clickhouse"
 cask "docker"
 cask "doll"
+cask "font-comic-shanns-mono-nerd-font"
 cask "font-courier-prime-code"
 cask "font-cousine-nerd-font"
 cask "font-fira-code"
 cask "font-fira-code-nerd-font"
+cask "font-gohufont-nerd-font"
+cask "font-iosevka-nerd-font"
+cask "font-jetbrains-mono-nerd-font"
+cask "font-meslo-lg-nerd-font"
 cask "font-sf-mono-nerd-font-ligaturized"
+cask "ghostty"
 cask "google-chrome"
-cask "mongodb-compass"
-cask "obsidian"
 cask "pgadmin4"
 cask "pop"
 cask "rectangle"
@@ -73,11 +106,11 @@ cask "spotify"
 cask "the-unarchiver"
 cask "visual-studio-code"
 cask "windscribe"
+cask "zen-browser"
 vscode "arcticicestudio.nord-visual-studio-code"
 vscode "bastienboutonnet.vscode-dbt"
 vscode "charliermarsh.ruff"
 vscode "dsznajder.es7-react-js-snippets"
-vscode "eamodio.find-related"
 vscode "eamodio.gitlens"
 vscode "esbenp.prettier-vscode"
 vscode "github.github-vscode-theme"
@@ -108,4 +141,5 @@ vscode "prisma.prisma"
 vscode "redhat.vscode-xml"
 vscode "rust-lang.rust-analyzer"
 vscode "samuelcolvin.jinjahtml"
+vscode "simonho.kanagawa-paper"
 vscode "vscodevim.vim"
